# proc-macro-blog-examples

./: .editorconfig  Cargo.toml
derive_getters/: Cargo.toml
derive_getters/src/: getters.rs  lib.rs
derive_getters/tests/: news_feed.rs
