[package]
name = "derive_getters"
description = "A derive macro example for my blog series on procedural macros"
version = "0.1.0"
authors = ["Jonas Platte <jplatte@posteo.de>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = "1.0.60"
